5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4368/executions/1633_2946.log
== TEST (2019-04-02 18:59:16) 
-- CODE:
print=round(25/100,30/100,45/100)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print=round(25/100,30/100,45/100)
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:38:25) 
-- CODE:
texto1=round(input(25/8,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto1=round(input(25/8,2))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:38:51) 
-- CODE:
texto1=round(input("digite um numero":25/8,2))
-- ERROR:
File "XXXX", line 1
    texto1=round(input("digite um numero":25/8,2))
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:39:10) 
-- CODE:
texto1=round(input("digite um numero":))
-- ERROR:
File "XXXX", line 1
    texto1=round(input("digite um numero":))
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:39:17) 
-- CODE:
texto1=round(input("digite um numero": ))
-- ERROR:
File "XXXX", line 1
    texto1=round(input("digite um numero": ))
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:39:31) 
-- CODE:
texto1=round(input("digite um numero: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto1=round(input())
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:39:56) 
-- CODE:
texto1=round(input("digite um numero: n,2"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto1=round(input())
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:40:23) 
-- CODE:
texto1=float(input("digite um numero: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto1=round(input())
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:41:23) 
-- CODE:
texto1=round(8/25)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto1=round(input())
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:43:22) 
-- CODE:
texto1=round(8/25,2)
texto2=round(8/30,2)
texto3=round(8/45,2)
print=(texto1+texto2+texto3/3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto1=round(input())
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:43:39) 
-- CODE:
texto1=round(8/25,2)
texto2=round(8/30,2)
texto3=round(8/45,2)
print=(texto1+texto2+texto3/3)
-- EXECUTION TIME:
0.150016
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:

-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:44:02) 
-- CODE:
texto1=round(8/25,2)
texto2=round(8/30,2)
texto3=round(8/45,2)
print=round(texto1+texto2+texto3/3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto1=round(input())
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:44:08) 
-- CODE:
texto1=round(8/25,2)
texto2=round(8/30,2)
texto3=round(8/45,2)
print=round(texto1+texto2+texto3/3)
-- EXECUTION TIME:
0.17699
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:

-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:45:00) 
-- CODE:
texto1=round(8/25,2)
texto2=round(8/30,2)
texto3=round(8/45,2)
print=round(texto1+texto2+texto3/3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto1=round(input())
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:46:24) 
-- CODE:
texto1=round(float(8/25,2))
texto2=round(float(8/30,2))
texto3=round(float(8/45,2))
print=round(texto1+texto2+texto3/3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto1=round(float(8/25,2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:47:04) 
-- CODE:
texto1=round(8/25,2)
texto2=round(8/30,2)
texto3=round(8/45,2)
print=round(texto1+texto2+texto3/3,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto1=round(float(8/25,2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:47:08) 
-- CODE:
texto1=round(8/25,2)
texto2=round(8/30,2)
texto3=round(8/45,2)
print=round(texto1+texto2+texto3/3,2)
-- EXECUTION TIME:
0.173096
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:

-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:47:18) 
-- CODE:
texto1=round(8/25,2)
texto2=round(8/30,2)
texto3=round(8/45,2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto1=round(float(8/25,2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:47:21) 
-- CODE:
texto1=round(8/25,2)
texto2=round(8/30,2)
texto3=round(8/45,2)

-- EXECUTION TIME:
0.141443
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:

-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:49:10) 
-- CODE:
texto1=round(input(8/25,2))
texto2=round(input(8/30,2))
texto3=round(input(8/45,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto1=round(input(8/25,2))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
